--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ a{color:inherit}
 .btn.alt{background:transparent;border:1px solid var(--maroon);color:var(--maroon)}
 h1{
   font-size: 52px;
-  font-family: 'Georgia', serif;
+  font-family: 'Playfair Display', serif;
   color: #D4AF37; /* gold */
   letter-spacing: 2px;
   text-shadow: 2px 2px 5px #000;
@@ -132,5 +132,7 @@ h1{
   width: auto;
   object-fit: contain;
 }
+
+
 
 
