--- a/style.css
+++ b/style.css
@@ -140,3 +140,10 @@ footer{
     height:45px;
   }
 }
+.ai-disclaimer {
+  font-size: 12px;
+  color: #777;
+  margin-top: 5px;
+  font-style: italic;
+  text-align: center;
+}
